style.css
.nav-link {
    color: gray;

}

.navbar-brand {
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: x-large;
    margin-left: 15px;
    font-weight: bolder;
    
}

body {
    background-color: lightgray;
    height: 100%;

}


.card {
    margin-top: 60px;
    margin-left: 30px;
    margin-bottom: 40px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    
}

img {
    margin-right: 15px;
    width: 70%;
    height: auto;

}

.portfolio-img {
    margin-bottom: 10%;
    width: 100%;
    height: auto;
}

#sticky-footer {
    border-top: 10px;
    border-color: bg-secondary;   
}

